fix(front): dix the navabar going out of screen,

--- a/front/src/app/components/navbar/navbar.component.scss
+++ b/front/src/app/components/navbar/navbar.component.scss
@@ -1,7 +1,7 @@
 .navbar {
-    width: 100%;
+    max-width: 100%;
     height: 70px;
-    padding: 0 25px;
+    padding: 0 20px;
 
     display: flex;
     align-items: center;
